tests/parsing/smtlib/mcil/errors/283_define-system_bad_attribute_6.mcil
(define-system sys :trans t _)